--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookies": "^0.7.0",
     "express": "^4.15.3",
     "markdown": "^0.5.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.12.13",
     "swig": "^1.4.2"
   }
