--- a/client_vue/package.json
+++ b/client_vue/package.json
@@ -11,21 +11,21 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0",
-    "vue": "^1.0.21",
-    "vue-router": "^0.7.13",
-    "vue-strap": "^1.0.11",
-    "vuex": "^0.8.2"
+    "babel-runtime": "^6.26.0",
+    "element-ui": "^2.15.2",
+    "vue-router": "^3.5.1",
+    "vue-strap": "^1.1.40",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.0.0",
-    "babel-preset-stage-3": "^6.11.0",
-    "connect-history-api-fallback": "^1.1.0",
-    "css-loader": "^0.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "css-loader": "^5.2.6",
     "eslint": "^2.10.2",
     "eslint-config-standard": "^5.1.0",
     "eslint-friendly-formatter": "^2.0.5",
@@ -37,27 +37,27 @@
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "fastclick": "^1.0.6",
-    "file-loader": "^0.8.4",
-    "function-bind": "^1.0.2",
+    "file-loader": "^6.2.0",
+    "function-bind": "^1.1.1",
     "highlight": "^0.2.4",
-    "highlight.js": "^9.5.0",
-    "html-webpack-plugin": "^2.8.1",
-    "http-proxy-middleware": "^0.12.0",
+    "highlight.js": "^11.0.1",
+    "html-webpack-plugin": "^5.3.1",
+    "http-proxy-middleware": "^2.0.0",
     "json-loader": "^0.5.4",
-    "marked": "^0.3.5",
-    "ora": "^0.2.0",
-    "prismjs": "^1.5.1",
-    "serve-favicon": "^2.3.0",
-    "shelljs": "^0.6.0",
-    "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^1.2.0",
-    "vue-html-loader": "^1.0.0",
-    "vue-loader": "^8.3.0",
-    "vue-resource": "^0.9.3",
-    "vue-style-loader": "^1.0.0",
-    "webpack": "^1.12.2",
-    "webpack-dev-middleware": "^1.4.0",
-    "webpack-hot-middleware": "^2.6.0",
-    "webpack-merge": "^0.8.3"
+    "marked": "^2.1.1",
+    "ora": "^5.4.1",
+    "prismjs": "^1.23.0",
+    "serve-favicon": "^2.5.0",
+    "shelljs": "^0.8.4",
+    "url-loader": "^4.1.1",
+    "vue-hot-reload-api": "^2.3.4",
+    "vue-html-loader": "^1.2.4",
+    "vue-loader": "^15.9.7",
+    "vue-resource": "^1.5.3",
+    "vue-style-loader": "^4.1.3",
+    "webpack": "^5.39.1",
+    "webpack-dev-middleware": "^5.0.0",
+    "webpack-hot-middleware": "^2.25.0",
+    "webpack-merge": "^5.8.0"
   }
 }
