--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.5",
     "cookies": "^0.7.0",
+    "element-ui": "^2.15.2",
     "express": "^4.15.3",
     "markdown": "^0.5.0",
     "moment": "^2.29.1",
